fix readme master

--- a/index.ipynb
+++ b/index.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Probably Approximately Correct (PAC) - Computational Learning Theory "
+    "# Introduction to PAC Learning Theory"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "source": [
     "## Introduction \n",
     "\n",
-    "___Probably Approximately Correct (PAC) computational learning theory provides a mathematically rigorous definition of what machine learning is.___\n",
+    "**Probably Approximately Correct (PAC)** computational learning theory provides a mathematically rigorous definition of what machine learning is.\n",
     "\n",
     "So far, we have looked into steps required in order to run machine learning algorithms including data representations, feature selection and engineering, training, prediction and evaluation of results. In this lesson, we shall provide a brief overview of a __Probably Approximately Correct__ or __PAC__ learning theory that provides a foundation for experimental settings that we have looked at so far. In essence , PAC deals with the computational aspect of machine learning. The theory helps us deal with sample complexity and associated computational complexity in order to answer an analytical question. "
    ]
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Failure Probability \n",
+    "## Failure Probability \n",
     "\n",
     "According to PAC, there is always a small probability that the learning algorithm fails and the results produced are not accurate. One obvious reason could be that learning examples do not fully reflect the probability distribution that the examples belong to, and. i.e. This hinders l learning process seriously and target function $f$ can not be achieved. insufficient examples is something that we come across very often in machine learning discipline.  PAC Learning attempts to reduce the probability of getting such poor examples by __considering a sufficient number of examples__ for learning the required function. \n",
     "\n",
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Function Approximation\n",
+    "## Function Approximation\n",
     "\n",
     "In PAC, we do not expect the learner to learn the __exact__ function most of the time, due to limits on available examples and noise in the data etc. We expect the learner to find a function $h$ which is very close to the desired function $f$. So we say that __$h$ approximates $f$__ , and that is function we are interested in learning. \n",
     "\n"
@@ -171,13 +171,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Additional Resources"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Additional Resources\n",
+    "\n",
     "A deeper understanding of PAC requires looking at some examples with proofs of how we identify PAC learnability. You are encouraged to visit following resources which will elaborate the points highlighted in this lesson.   \n",
     "\n",
     "- [PAC: A Formal theory of learning](https://jeremykun.com/2014/01/02/probably-approximately-correct-a-formal-theory-of-learning/)\n",
@@ -193,13 +188,6 @@
     "\n",
     "In this lesson, we looked at how PAC learning allows us to develop models , train and evaluate them in a computational learning domain. We looked at developing a basic intuition behind this theory and how it relates to different stages of model development that we have been looking at. You are encouraged to read into this theory and try to relate all the upcoming architectures to this theory to help you develop a sound and scalable understanding of ML from theory to practice. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
