fixed model typo

--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,7 @@
    "source": [
     "## How PAC relates to Machine Learning \n",
     "\n",
-    "PAC uses the term 'hypothesis',whereas ML literature normally uses the term 'model'. So we have seen that Machine learning starts with some data, (xi,yi) and we want to find a hypothesis (or mode) that will, given the inputs xi return yi or something very close. More importantly given new data x̃  the model will  predict the corresponding ỹ.\n",
+    "PAC uses the term 'hypothesis',whereas ML literature normally uses the term 'model'. So we have seen that Machine learning starts with some data, (xi,yi) and we want to find a hypothesis (or model) that will, given the inputs xi return yi or something very close. More importantly given new data x̃  the model will  predict the corresponding ỹ.\n",
     "\n",
     "A model that was created using some (out of many examples) of data do not accurately reflect that data set, but can be accurate on any future data sets. The two important points are that we cannot predict new data with 100% accuracy. There is also the possibility that the one or more examples are poor and do not explain much. \n",
     "\n",
@@ -206,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
