--- a/index.ipynb
+++ b/index.ipynb
@@ -13,9 +13,9 @@
    "source": [
     "## Introduction \n",
     "\n",
-    "**Probably Approximately Correct (PAC)** computational learning theory provides a mathematically rigorous definition of what machine learning is.\n",
+    "**Probably Approximately Correct (PAC)** computational learning theory provides a mathematically rigorous definition of statistical machine learning in a computational environment. This forms the basis of what we call \"Machine Learning\" (ML).\n",
     "\n",
-    "So far, we have looked into steps required in order to run machine learning algorithms including data representations, feature selection and engineering, training, prediction and evaluation of results. In this lesson, we shall provide a brief overview of a __Probably Approximately Correct__ or __PAC__ learning theory that provides a foundation for experimental settings that we have looked at so far. In essence , PAC deals with the computational aspect of machine learning. The theory helps us deal with sample complexity and associated computational complexity in order to answer an analytical question. "
+    "So far, we have looked at the steps required to run simple machine learning algorithms including data representations, feature selection and engineering, training, prediction and loss calculation. In this lesson, we shall provide a brief overview of a __Probably Approximately Correct__ or __PAC__ learning theory that provides a theoretical foundation for experimental settings that we have seen in previous sections. **In essence , PAC deals with the computational aspect of machine learning**. The theory helps us anticipate the required levels of sample complexity and associated computational complexity in order to answer an analytical question. "
    ]
   },
   {
@@ -25,7 +25,7 @@
     "\n",
     "## Objectives\n",
     "You will be able to:\n",
-    "- Understand and describe the PAC learning theory \n",
+    "- Understand and describe the PAC learning theory and associated computational framework\n",
     "- State how PAC theory relates to computational (machine) learning practices\n",
     "- Identify the major factors of PAC theory and describe how the error and confidence measures are used to approximate a desired function"
    ]
@@ -38,22 +38,63 @@
     "\n",
     "> The PAC is a learning models which is characterized by __learning from examples__. \n",
     "\n",
-    "In its simplest form, consider $f$ as the target function to be __learnt__, the __learner__ (the computational model) is provided with some random examples in the form of $(X,f(X))$.\n",
+    "Let's see how we can formulate a basic learning framework from given examples.\n",
     "\n",
-    "Here, $X$ is a binary input instance of length $n$, and $f(X)$ is the value (boolean TRUE or FALSE) of the target function at that instance. \n",
+    "In its simplest form, consider $f$ as the target function to be __learnt__, the __learner__ (the computational model) is provided with some random examples in the form :\n",
     "\n",
-    "Based on these examples, the __learner must succeed__ in deducing the target function $f$ which is expressed  as:\n",
+    "$$(X,f(X))$$.\n",
+    "\n",
+    "Here, $X$ is a binary input instance of length $n$, and $f(X)$ is the value (boolean TRUE or FALSE) of the target function at that instance. So in essence, we are being provided with a number of input examples and a target output specifying weather the input is a positive or negative. Any binary classification problem can fit this scenario ranging from disease identification, customer retention to results of a game of sports (win/lose). \n",
+    "\n",
+    "Based on these examples, the __learner must succeed__ in calculating the target function $f$ which is expressed  as:\n",
     "\n",
     "$$f : [0, 1]^n → {0, 1}$$. \n",
     "\n",
-    "What do we actually mean by __success__?  It should actually be any measure or a series of evaluation steps that help us find that the __algorithm meets the criteria__. Hence this approach can b shown using the model below:"
+    "\n",
+    "So what do we actually mean by __success__ here?  It should actually be any measure or a series of evaluation steps that help us find that the __algorithm meets the experimental criteria__. Hence this approach can be shown using the model below:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"pac1.png\" width=400>"
+    "<img src=\"pac1.png\" width=400>\n",
+    "\n",
+    "For computational learning, we need a theory to relate following components together:\n",
+    "\n",
+    "- Probability of successful learning \n",
+    "- Number of available training examples\n",
+    "- Complexity of hypothesis space\n",
+    "- Required level of accuracy\n",
+    "- Manner in which training examples are presented\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Probably approximately correct (PAC) learning theory helps analyze whether and under what conditions a learner $L$ will **probably** output an **approximately correct** classifier. \n",
+    "\n",
+    "First, let's define the \"approximate\" aspect of this theory.  \n",
+    "\n",
+    "> A hypothesis $h∈H$ is **approximately correct** if its error over the distribution over inputs $D$ is bounded by some error $\\epsilon$ , such that  $0 \\le \\epsilon \\le \\frac{1}{2}.$ \n",
+    "\n",
+    "Next, \"probably.\" \n",
+    "\n",
+    "> If $L$ (the learner) outputs such a classifier with probability $1−δ$, with $0 \\le \\delta \\le \\frac{1}{2}$, we call that classifier **probably approximately correct**.\n",
+    "\n",
+    "Knowing that a target concept is **PAC-learnable** allows us to bound the sample size necessary to probably learn an approximately correct classifier. This is shown in the figure below:\n",
+    "\n",
+    "![](pac.png)\n",
+    "\n",
+    "In the equation shown above i.e. $m \\ge\\frac{1}{\\epsilon}(ln|H| + ln\\frac{1}{\\delta})$, note the effects on $m$ when we alter variables in the right-hand side. \n",
+    "\n",
+    "As allowable error $\\epsilon$ decreases, the necessary sample size $m$ grows. i.e. a higher number of samples will be required to conclude an experiment with a low margin of error. sample size grows with the probability of an approximately correct learner, and with the size of the hypothesis space $H$. \n",
+    "> __A hypothesis space is the set of all classifiers (models) that our algorithm considers before selecting the best one.__\n",
+    "\n",
+    "More plainly, as you consider more possible classifiers, or desire a lower error or higher probability of correctness, you need more data to distinguish between them.\n",
+    "\n",
+    "Let's see these concepts in a bit more detail below:"
    ]
   },
   {
@@ -62,10 +103,10 @@
    "source": [
     "## Failure Probability \n",
     "\n",
-    "According to PAC, there is always a small probability that the learning algorithm fails and the results produced are not accurate. One obvious reason could be that learning examples do not fully reflect the probability distribution that the examples belong to, and. i.e. This hinders l learning process seriously and target function $f$ can not be achieved. insufficient examples is something that we come across very often in machine learning discipline.  PAC Learning attempts to reduce the probability of getting such poor examples by __considering a sufficient number of examples__ for learning the required function. \n",
-    "\n",
     "> __PAC learning approach places an upper bound on the probability of error by placing a lower bound on the number\n",
-    "of examples required to learn the target function.__"
+    "of examples required to learn the target function.__\n",
+    "\n",
+    "Let's see what this means. According to PAC, there is always a small probability that the learning algorithm will fail and the results produced will not be accurate. One obvious reason could be that learning examples do not fully reflect the probability distribution that the examples belong to. This hinders learning process seriously and target function $f$ can not be successfully achieved. insufficient examples is something that we come across very often in machine learning discipline.  PAC Learning attempts to reduce the probability of getting poor examples by __considering a sufficient number of examples__ for learning the required function. "
    ]
   },
   {
@@ -74,7 +115,7 @@
    "source": [
     "## Function Approximation\n",
     "\n",
-    "In PAC, we do not expect the learner to learn the __exact__ function most of the time, due to limits on available examples and noise in the data etc. We expect the learner to find a function $h$ which is very close to the desired function $f$. So we say that __$h$ approximates $f$__ , and that is function we are interested in learning. \n",
+    "In PAC, we do not expect the learner to learn the __exact__ function most of the time, due to limits on available examples and noise in the data etc. If the learner attempts to learn the exact function from given data, we often stop the learning process to avoid an over-fitting and promote generalizability.  So we expect the learner to find a function $h$ which is very close to the desired function $f$. So we say that __$h$ approximates $f$__ , and that is the function we are interested in learning. \n",
     "\n"
    ]
   },
@@ -82,20 +123,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The two factors given above are to explain the meaning of success. \n",
-    "\n",
-    "**\"Probably: \"** If learner outputs the data with desired probability and confidence, the results are probably correct\n",
-    "\n",
-    "**\"Approximately: .\"** A hypothesis is approximately correct if its error over the distribution of inputs is bounded by some predefined interval. \n",
-    "\n",
-    "The results of PAC learning are therefore called \"**Probably Approximately Correct**\"\n",
-    "\n",
-    "\n",
     "## Error Calculation\n",
     "\n",
-    "Based on these, PAC gives:\n",
-    "- an upper bound on the error in accuracy with which h approximates f and \n",
-    "- the probability of failure in achieving this accuracy. \n",
+    "Error calculation with PAC learning is the probability of failure in achieving the required level of accuracy. \n",
     "\n",
     "With these quantities, we an express the definition of a PAC Algorithm with more mathematical clarity. \n",
     "\n",
@@ -106,9 +136,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The notion of approximation is described as:\n",
-    "__There is some probability distribution $D$, defined in the sample sample $[0,1]|^n$ giving probability of each example.__ So we are picking examples from this distribution, at random. Also, its imperative to mention that the all the examples that learner is provided with are __iid__ ,independent and identical . Considering\n",
-    "the total probability of seeing a sequence of examples over $D$ , we will use the product rule."
+    "As we saw above, **approximation** is based on some probability distribution $D$, defined in the sample sample $[0,1]|^n$ giving probability of each example. \n",
+    "\n",
+    "We are taking examples from this distribution at random and all the examples that learner is provided with are __iid__ ,independent and identical. Considering the total probability of seeing a sequence of examples over $D$ , we will use the product rule."
    ]
   },
   {
@@ -157,14 +187,19 @@
    "source": [
     "## How PAC relates to Machine Learning \n",
     "\n",
-    "PAC uses the term 'hypothesis',whereas ML literature normally uses the term 'model'. So we have seen that Machine learning starts with some data, (xi,yi) and we want to find a hypothesis (or model) that will, given the inputs xi return yi or something very close. More importantly given new data x̃  the model will  predict the corresponding ỹ.\n",
+    "> PAC uses the term '__hypothesis__', whereas ML literature normally uses the term '__model__'. We have seen that machine learning experiments start with some data, $(x_i,y_i)$ and we want to find a hypothesis (or a model) that will, given the inputs $x_i$ return $y_i$ or something very close. More importantly given new data $x̃$  the model will  predict the corresponding $ỹ$.\n",
     "\n",
-    "A model that was created using some (out of many examples) of data do not accurately reflect that data set, but can be accurate on any future data sets. The two important points are that we cannot predict new data with 100% accuracy. There is also the possibility that the one or more examples are poor and do not explain much. \n",
+    "A model that was created using some (out of many examples) of data do not accurately reflect that data set, but can be accurate on any future data sets. The two important points are: \n",
     "\n",
-    "We present our data to the learner and let it make an attempt to learn the hypothesis function. At discrete stages ,we  then look at the error as the difference between real and hypothesis function outputs. A problem is called learnable if we can reduce this error within acceptable bounds. \n",
+    "- We cannot predict new data with 100% accuracy.\n",
+    "- There is always a possibility that the one or more examples are poor and do not explain much. \n",
+    "\n",
+    "We present our data to the learner and let it make an attempt to learn the hypothesis function. At discrete stages, we look at the error as the difference between real and hypothesis function outputs. \n",
+    "\n",
+    ">A problem is called learnable if we can reduce this error within acceptable bounds. \n",
     "\n",
     "---\n",
-    "SO that is PAC. It is essentially provides theoretical and mathematical underpinning to different stages of machine learning that we have been looking at in our course. This theory justifies the need for splitting data into test and training sets. It gives a reason to tune hyper parameters as the learner is independent of the data distribution. This theory also provides grounds for the evaluation methods we have seen including RMSE, ROC, AUC etc. to ensure that our model is learning and approximating a desired function. "
+    "So that is PAC. It is essentially provides theoretical and mathematical underpinning to different stages of machine learning that we have been looking at in our course. This theory justifies the need for splitting data into test and training sets. It gives a reason to tune hyper parameters as the learner is independent of the data distribution. This theory also provides grounds for the evaluation methods we have seen including RMSE, ROC, AUC etc. to ensure that our model is learning and approximating a desired function. "
    ]
   },
   {
@@ -176,7 +211,7 @@
     "A deeper understanding of PAC requires looking at some examples with proofs of how we identify PAC learnability. You are encouraged to visit following resources which will elaborate the points highlighted in this lesson.   \n",
     "\n",
     "- [PAC: A Formal theory of learning](https://jeremykun.com/2014/01/02/probably-approximately-correct-a-formal-theory-of-learning/)\n",
-    "- [Theoratical Machine Learning](https://www.cs.princeton.edu/courses/archive/spring14/cos511/scribe_notes/0211.pdf)\n",
+    "- [Theoretical Machine Learning](https://www.cs.princeton.edu/courses/archive/spring14/cos511/scribe_notes/0211.pdf)\n",
     "    "
    ]
   },
@@ -206,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
