--- a/index.ipynb
+++ b/index.ipynb
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"images/pac1.png\" width=400>"
+    "<center><img src=\"images/pac1_fs.png\" width=\"700\">"
    ]
   },
   {
@@ -69,13 +69,8 @@
     "\n",
     "Let's put this in more mathematical terms to better understand exactly how PAC Learning Theory works. \n",
     "\n",
-    "In PAC, we do not expect the learner to learn the __exact__ function most of the time, due to limits on available examples and noise in the data etc. We expect the learner to find a function $h$ which is very close to the desired function $f$. So we say that __$h$ approximates $f$__ , and that is function we are interested in learning. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "In PAC, we do not expect the learner to learn the __exact__ function most of the time, due to limits on available examples and noise in the data etc. We expect the learner to find a function $h$ which is very close to the desired function $f$. So we say that __$h$ approximates $f$__ , and that is function we are interested in learning. \n",
+    "\n",
     "Let's examine some more formalized definitions of the operative words in PAC:\n",
     "\n",
     "**\"Probably: \"** If learner outputs the data with desired probability and confidence, the results are probably correct\n",
@@ -102,29 +97,19 @@
    "source": [
     "We can further clarify our definition of _approximation_ by thinking of this in terms of probability distributions. The notion of approximation is described as:\n",
     "\n",
-    "__There is some probability distribution $D$, defined in the sample sample $[0,1]|^n$ giving probability of each example.__ So we are picking examples from this distribution, at random. Also, its imperative to mention that the all the examples that learner is provided with are __iid__ ,independent and identical . Considering the total probability of seeing a sequence of examples over $D$ , we will use the product rule."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "__There is some probability distribution $D$, defined in the sample sample $[0,1]|^n$ giving probability of each example.__ So we are picking examples from this distribution, at random. Also, its imperative to mention that the all the examples that learner is provided with are __iid__ ,independent and identical . Considering the total probability of seeing a sequence of examples over $D$ , we will use the product rule.\n",
+    "\n",
     "The distribution $D$, conveniently and mathematically quantifies the error with which $h$ approximates $f$ as shown below:\n",
     "\n",
     "$$err(h, f) ≡ P_{x∈D}(h(x) \\neq f(x))$$\n",
     "\n",
     "If we wanted to read this equation out loud, we would say:\n",
     "\n",
-    "\"The error rate of our approximated function $h$ in relation to our ground-truth function $f$ is equal to the probability $P$ that our samples $x$ come from the probability distribution $D$ where $h(x)$ does not equal $f(x)$.\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\"The error rate of our approximated function $h$ in relation to our ground-truth function $f$ is equal to the probability $P$ that our samples $x$ come from the probability distribution $D$ where $h(x)$ does not equal $f(x)$.\"\n",
+    "\n",
     "$P_{x∈D}$ reflects the probabilities are taken with respect to random draws over $D$ __only__. Luckily, this is much easier to understand when we visualize it. In terms of set theory, our error is the __symmetric difference__ between the sets corresponding to $h$ and $f$ over $X$, shown in the shaded areas below, highlighting probabilistic region of disagreement between $h$ and $f$, which gives us the probability of error:\n",
     "\n",
-    "<img src=\"images/pac2.png\" width=200>"
+    "<img src=\"images/pac2_fs.png\" width=\"340\">"
    ]
   },
   {
@@ -136,13 +121,8 @@
     "PAC Learning theory has its roots in mathematics, and this is a topic where we can go pretty deep down the rabbit hole. Although having a deep understanding of PAC Learning Theory isn't a requirement for being a good data scientist or building awesome models, it never hurts to know a bit more about the subject. If you're the type of person that likes reading mathematical proofs and definitions, check out [this link](https://www.cs.princeton.edu/courses/archive/spring14/cos511/scribe_notes/0211.pdf)! The document details following problems that are PAC learnable. \n",
     "- Learning positive half-lines\n",
     "- Learning intervals\n",
-    "- Learning axis-aligned rectangles"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- Learning axis-aligned rectangles\n",
+    "\n",
     "## How PAC relates to Machine Learning \n",
     "\n",
     "PAC uses the term 'hypothesis',whereas ML literature normally uses the term 'model'. So we have seen that Machine learning starts with some data, $(x_i,y_i)$ and we want to find a hypothesis (or model) that will, given the inputs $x_i$ return $y_i$ or something very close. More importantly given new data x̃  the model will  predict the corresponding ỹ.\n",
@@ -152,26 +132,16 @@
     "We present our data to the learner and let it make an attempt to learn the hypothesis function. At discrete stages ,we  then look at the error as the difference between real and hypothesis function outputs. A problem is called learnable if we can reduce this error within acceptable bounds. \n",
     "\n",
     "---\n",
-    "So that is PAC. It is essentially provides theoretical and mathematical underpinning to different stages of machine learning that we have been looking at in our course. This theory justifies the need for splitting data into test and training sets. It gives a reason to tune hyperparameters as the learner is independent of the data distribution. This theory also provides grounds for the evaluation methods we have seen including RMSE, ROC, AUC etc. to ensure that our model is learning and approximating a desired function. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "So that is PAC. It is essentially provides theoretical and mathematical underpinning to different stages of machine learning that we have been looking at in our course. This theory justifies the need for splitting data into test and training sets. It gives a reason to tune hyperparameters as the learner is independent of the data distribution. This theory also provides grounds for the evaluation methods we have seen including RMSE, ROC, AUC etc. to ensure that our model is learning and approximating a desired function. \n",
+    "\n",
     "## Additional Resources\n",
     "\n",
     "A deeper understanding of PAC requires looking at some examples with proofs of how we identify PAC learnability. You are encouraged to visit following resources which will elaborate the points highlighted in this lesson.   \n",
     "\n",
     "- [PAC: A Formal theory of learning](https://jeremykun.com/2014/01/02/probably-approximately-correct-a-formal-theory-of-learning/)\n",
     "- [Theoratical Machine Learning](https://www.cs.princeton.edu/courses/archive/spring14/cos511/scribe_notes/0211.pdf)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    \n",
+    "\n",
     "## Summary \n",
     "\n",
     "In this lesson, we looked at how PAC learning allows us to develop models , train and evaluate them in a computational learning domain. We looked at developing a basic intuition behind this theory and how it relates to different stages of model development that we have been looking at. You are encouraged to read into this theory and try to relate all the upcoming architectures to this theory to help you develop a sound and scalable understanding of ML from theory to practice. "
@@ -194,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
